adds theme script, kitty and dunst setup

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -22,8 +22,8 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = DP-1, 2560x1440@144, 0x0, 1.25, bitdepth, 10, cm, auto
-monitor = HDMI-A-1, 1920x1080@60, 2560x-40, 1
+monitor = DP-1, 2560x1440@144, 0x0, 1.25, cm, auto
+monitor = HDMI-A-1, 1920x1080@60, 2048x-40, 1
 workspace = name:1, monitor:DP-1
 workspace = name:2, monitor:DP-1
 workspace = name:3, monitor:DP-1
@@ -59,6 +59,12 @@ $emojiMenu = rofi -modi emoji -show emoji -kb-secondary-copy "" -kb-custom-1 Ctr
 exec-once = hyprpaper
 exec-once = clipse -listen
 
+#############
+### DEBUG ###
+#############
+debug {
+    disable_logs = false
+}
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -345,5 +351,5 @@ layerrule = order -10, rofi # on top of notifications and stuff
 layerrule = dimaround, rofi
 layerrule = xray 1, rofi
 # dunst
-layerrule = blur, notifications
+# layerrule = blur, notifications
 
