--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,3 @@
-preload = /home/kov/wallpapers/malenia.jpg
-wallpaper = , /home/kov/wallpapers/malenia.jpg
+preload = /home/kov/wallpapers/elden-ring-pixel-art.png
+wallpaper = , /home/kov/wallpapers/elden-ring-pixel-art.png
+
