--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,5 +1,7 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
+include current-theme.conf
+
 # BEGIN_KITTY_FONTS
 font_family      family="IBM Plex Mono"
 bold_font        auto
@@ -1271,12 +1273,12 @@ window_padding_width 10
 
 #: Color scheme {{{
 
-foreground #c2acc1
-background #2f2c40
+# foreground #eff6ee
+# background #131713
 
 #: The foreground and background colors.
 
-background_opacity 0.9
+# background_opacity 0.9
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
