--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -42,8 +42,8 @@ exec-once = hyprctl dispatch workspace 1
 $terminal = kitty
 $browser = chromium
 $fileManager = dolphin
-$menu = rofi -show drun -drun-display-format {name}
-$runMenu = rofi -show run
+$menu = rofi -show drun -drun-display-format {name} -hover-select -me-select-entry '' -me-accept-entry MousePrimary
+$runMenu = rofi -show run -theme kov-run
 $emojiMenu = rofi -modi emoji -show emoji -kb-secondary-copy "" -kb-custom-1 Ctrl+c -emoji-mode copy
 
 #################
@@ -87,7 +87,7 @@ env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 0
+    gaps_in = 5
     gaps_out = 10, 0, 0, 0
 
     border_size = 0
@@ -118,7 +118,7 @@ decoration {
         enabled = true
         range = 4
         render_power = 3
-        color = rgba(2f2c40ee)
+        color = rgba(131713ee)
     }
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
