brings back gaps

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -88,7 +88,7 @@ env = ELECTRON_OZONE_PLATFORM_HINT,auto
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 5
-    gaps_out = 10, 0, 0, 0
+    gaps_out = 10
 
     border_size = 0
 
