--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -23,7 +23,8 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor = DP-1, 2560x1440@144, 0x0, 1.25, cm, auto
-monitor = HDMI-A-1, 1920x1080@60, 2048x-40, 1
+monitor = HDMI-A-1, 1920x1080@60, 0x-1080, 1
+monitor = HDMI-A-1, addreserved, 0, 40, 0, 0
 workspace = name:1, monitor:DP-1
 workspace = name:2, monitor:DP-1
 workspace = name:3, monitor:DP-1
@@ -44,7 +45,7 @@ $browser = chromium
 $fileManager = dolphin
 $menu = rofi -show drun -drun-display-format {name} -hover-select -me-select-entry '' -me-accept-entry MousePrimary
 $runMenu = rofi -show run -theme kov-run
-$emojiMenu = rofi -modi emoji -show emoji -kb-secondary-copy "" -kb-custom-1 Ctrl+c -emoji-mode copy
+$emojiMenu = rofi -modi emoji -show emoji -kb-secondary-copy "" -kb-custom-1 Ctrl+c -emoji-mode copy -theme kov-run
 
 #################
 ### AUTOSTART ###
