updates hyprlock theme

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,12 +1,12 @@
 background {
     monitor =
-    path = /home/kov/wallpapers/malenia.jpg
+    path = /home/kov/wallpapers/elden-ring-pixel-art.png
     blur_passes = 1
 }
 
 input-field {
     monitor = DP-1
-    inner_color = rgba(c2acc1aa)
-    font_color = rgba(2f2c40ff)
+    inner_color = rgba(313830aa)
+    font_color = rgba(f5d58cff)
 }
 
